# gpt_sovits_rs_server

./: .gitignore  Cargo.toml  README.md  config.json
src/: main.rs
