[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
gpt_sovits_rs = { path = "../gpt_sovits_rs" }
hound = "3.5.1"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = "5.0.0"
tokio = { version = "1.43.0", features = ["full"] }

